# Fake_projects

./: .gitignore  README.md
test_project_1/: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  package.json
test_project_1/apps/api-server/: .env.example  README.md  main.py
test_project_1/apps/frontend/: .env.example  index.html  package.json
test_project_1/apps/frontend/src/: App.css  App.tsx
test_project_1/apps/langgraph-agent/: .env.example  README.md  langgraph.json  pyproject.toml
test_project_1/apps/langgraph-agent/src/: __init__.py  agent.py
