[project]
name = "test-project-1-agent"
version = "0.1.0"
description = "Simple LangGraph agent for Test Project 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.55",
    "langchain-core>=0.3.21",
    "langchain-openai>=0.2.10",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
